Fix of displaying Cambria on Safari.

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -7,35 +7,58 @@
 @font-face
 {
   /* normal */
-  font-family: Cambria;
-  src: url(/assets/fonts/cambria.ttc);
+  font-family: "Cambria";
+  src: url("/assets/fonts/Cambria.eot");
+  src: url("/assets/fonts/Cambria.eot?#iefix") format("embedded-opentype"),
+       url("/assets/fonts/Cambria.woff2") format("woff2"),
+       url("/assets/fonts/Cambria.woff") format("woff"),
+       url("/assets/fonts/Cambria.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face
 {
   /* bold */
-  font-family: Cambria;
-  src: url(/assets/fonts/cambriab.ttf);
+  font-family: "Cambria";
+  src: url("/assets/fonts/Cambria-Bold.eot");
+  src: url("/assets/fonts/Cambria-Bold.eot?#iefix") format("embedded-opentype"),
+       url("/assets/fonts/Cambria-Bold.woff2") format("woff2"),
+       url("/assets/fonts/Cambria-Bold.woff") format("woff"),
+       url("/assets/fonts/Cambria-Bold.ttf") format("truetype");
   font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face
 {
   /* italic */
-  font-family: Cambria;
-  src: url(/assets/fonts/cambriai.ttf);
+  font-family: "Cambria";
+  src: url("/assets/fonts/Cambria-Italic.eot");
+  src: url("/assets/fonts/Cambria-Italic.eot?#iefix") format("embedded-opentype"),
+       url("/assets/fonts/Cambria-Italic.woff2") format("woff2"),
+       url("/assets/fonts/Cambria-Italic.woff") format("woff"),
+       url("/assets/fonts/Cambria-Italic.ttf") format("truetype");
+  font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face
 {
   /* bold italic */
-  font-family: Cambria;
-  src: url(/assets/fonts/cambriaz.ttf);
-  font-style: italic;
+  font-family: "Cambria";
+  src: url("/assets/fonts/Cambria-BoldItalic.eot");
+  src: url("/assets/fonts/Cambria-BoldItalic.eot?#iefix") format("embedded-opentype"),
+       url("/assets/fonts/Cambria-BoldItalic.woff2") format("woff2"),
+       url("/assets/fonts/Cambria-BoldItalic.woff") format("woff"),
+       url("/assets/fonts/Cambria-BoldItalic.ttf") format("truetype");
   font-weight: bold;
+  font-style: italic;
+  font-display: swap;
 }
-
 
 /* Constantia */
 
@@ -104,7 +127,7 @@
   scrollbar-width: thin;
 }
 
-/* The scrollbar track's style */
+/* The scrollbar track"s style */
 ::-webkit-scrollbar-track
 {
   box-shadow: inset 0 0 0.4rem rgba(212, 139, 21, 0.7);
